--- a/TurtlesInformational/Views/Home/Index.cshtml
+++ b/TurtlesInformational/Views/Home/Index.cshtml
@@ -1,8 +1,115 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+</head>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<style>
+    .button1 {
+        background-image: url('../css/Images/240_F_134537443_VendrqyXIWyHrZgxdIsfyKUost734JDP.jpg');
+        background-size: cover;
+        width: 300px;
+        height: 400px;
+        font-size: 2rem;
+        flex-shrink: 1;
+        color: antiquewhite;
+    }
+
+    .button2 {
+        background-image: url( '../css/Images/swamp-water-trees-nature-wallpaper-preview.jpg');
+        background-size: cover;
+        width: 300px;
+        height: 400px;
+        font-size: 2rem;
+        flex-shrink: 1;
+        color: antiquewhite;
+    }
+    .button3 {
+        background-image: url( '../css/Images/1224063.jpg');
+        background-size: cover;
+        width: 300px;
+        height: 400px;
+        font-size: 2rem;
+        flex-shrink: 1;
+        color: antiquewhite;
+    }
+
+</style>
+<main class="main1">
+        <div class="text-center">
+        <h1 class="display-4">Welcome to The Turtle Informational!</h1>
+        <p>Select the biome you wish to learn about!</p>
+      </div>
+        <div id="container">
+        <a href="/Turtle/ViewByCategory/1"><button class="button1">Ocean</button></a>
+        <a href="/Turtle/ViewByCategory/2"><button class="button2">Fresh Water</button></a>
+        <a href="/Turtle/ViewByCategory/3"><button class="button3">Land</button></a>
+      </div>
+
+    <html lang="en">
+        <body>
+
+            <div class="container" style="width: 400px; height: 500px;">
+                <h2>My favorite Turtles!</h2>
+                <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#myCarousel" data-slide-to="1"></li>
+                        <li data-target="#myCarousel" data-slide-to="2"></li>
+                    </ol>
+
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner">
+
+                        <div class="item active">
+                            <img src="../css/Images/Red-Footed-Tortoise-Must-Know-Facts.jpg" alt="Redfoot" style="width:100%;">
+                            <div class="carousel-caption">
+                                <h3>Redfoot Tortoise</h3>
+                                <p>I own one!</p>
+                            </div>
+                        </div>
+
+                        <div class="item">
+                            <img src="../css/Images/Pig-Nosed-Turtle-Facts-768x511.jpg" alt="pig nose" style="width:100%;">
+                            <div class="carousel-caption">
+                                <h3>Pignose Turtle</h3>
+                                <p>One of a kind!</p>
+                            </div>
+                        </div>
+    
+                        <div class="item">
+                            <img src="../css/Images/Alligator-Snapping-Turtle-06.jpg" alt="Snapping turtle" style="width:100%;">
+                            <div class="carousel-caption">
+                                <h3>Alligator snapping turtle</h3>
+                                <p>Can and will bite your hand off!</p>
+                            </div>
+                        </div>
+  
+                    </div>
+
+                    <!-- Left and right controls -->
+                    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+
+        </body>
+    </html>
+</main>
+<footer>
+<div>
+
 </div>
+</footer>
