--- a/TurtlesInformational/Views/Home/Index.cshtml
+++ b/TurtlesInformational/Views/Home/Index.cshtml
@@ -1,13 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-</head>
+
 
 <style>
     .button1 {
@@ -40,76 +34,49 @@
     }
 
 </style>
-<main class="main1">
-        <div class="text-center">
-        <h1 class="display-4">Welcome to The Turtle Informational!</h1>
-        <p>Select the biome you wish to learn about!</p>
-      </div>
-        <div id="container">
-        <a href="/Turtle/ViewByCategory/1"><button class="button1">Ocean</button></a>
-        <a href="/Turtle/ViewByCategory/2"><button class="button2">Fresh Water</button></a>
-        <a href="/Turtle/ViewByCategory/3"><button class="button3">Land</button></a>
-      </div>
 
-    <html lang="en">
-        <body>
-
-            <div class="container" style="width: 400px; height: 500px;">
-                <h2>My favorite Turtles!</h2>
-                <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                    <!-- Indicators -->
-                    <ol class="carousel-indicators">
-                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                        <li data-target="#myCarousel" data-slide-to="1"></li>
-                        <li data-target="#myCarousel" data-slide-to="2"></li>
-                    </ol>
-
-                    <!-- Wrapper for slides -->
-                    <div class="carousel-inner">
-
-                        <div class="item active">
-                            <img src="../css/Images/Red-Footed-Tortoise-Must-Know-Facts.jpg" alt="Redfoot" style="width:100%;">
-                            <div class="carousel-caption">
-                                <h3>Redfoot Tortoise</h3>
-                                <p>I own one!</p>
-                            </div>
-                        </div>
-
-                        <div class="item">
-                            <img src="../css/Images/Pig-Nosed-Turtle-Facts-768x511.jpg" alt="pig nose" style="width:100%;">
-                            <div class="carousel-caption">
-                                <h3>Pignose Turtle</h3>
-                                <p>One of a kind!</p>
-                            </div>
-                        </div>
-    
-                        <div class="item">
-                            <img src="../css/Images/Alligator-Snapping-Turtle-06.jpg" alt="Snapping turtle" style="width:100%;">
-                            <div class="carousel-caption">
-                                <h3>Alligator snapping turtle</h3>
-                                <p>Can and will bite your hand off!</p>
-                            </div>
-                        </div>
-  
-                    </div>
-
-                    <!-- Left and right controls -->
-                    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-                        <span class="glyphicon glyphicon-chevron-left"></span>
-                        <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="right carousel-control" href="#myCarousel" data-slide="next">
-                        <span class="glyphicon glyphicon-chevron-right"></span>
-                        <span class="sr-only">Next</span>
-                    </a>
-                </div>
-            </div>
-
-        </body>
-    </html>
-</main>
-<footer>
-<div>
-
+<div class="text-center">
+    <h1 class="display-4">Welcome to The Turtle Informational!</h1>
+    <p>Select the biome you wish to learn about!</p>
 </div>
-</footer>
+<div id="container">
+    <a href="/Turtle/ViewByCategory/1"><button class="button1">Ocean</button></a>
+    <a href="/Turtle/ViewByCategory/2"><button class="button2">Fresh Water</button></a>
+    <a href="/Turtle/ViewByCategory/3"><button class="button3">Land</button></a>
+</div>
+
+
+<h2 style="text-align: center;">Personal Favorites!</h2>
+<div id="carouselExampleControls" class="carousel slide mx-auto" data-bs-ride="carousel" style="width: 400px; height: 500px;">
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="../css/Images/Red-Footed-Tortoise-Must-Know-Facts.jpg" class="d-block w-100" alt="Redfoot pic">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Redfoot Tortoise</h5>
+                <p>I have one!</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="../css/Images/Pig-Nosed-Turtle-Facts-768x511.jpg" class="d-block w-100" alt="Pig nosed turtle pic">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Pignose Turtle</h5>
+                <p>One of a kind! Literally!</p>
+            </div>
+        </div>
+        <div class="carousel-item">
+            <img src="../css/Images/Alligator-Snapping-Turtle-06.jpg" class="d-block w-100" alt="Snapping turtle pic">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Alligator snapping turtle</h5>
+                <p>Can and will bite your hand off!</p>
+            </div>
+        </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+</div>
