--- a/TurtlesInformational/Views/Shared/_Layout.cshtml
+++ b/TurtlesInformational/Views/Shared/_Layout.cshtml
@@ -4,27 +4,33 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - TurtlesInformational</title>
+    @RenderSection("css", false)
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/TurtlesInformational.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light  border-bottom box-shadow mb-3" style="background: linear-gradient(to right, #dbf6e5, #0cb349);">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3" style="background: linear-gradient(to right, #dbf6e5, #0cb349);">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Turtles Informational</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                <div class="collapse navbar-collapse">
+                    <ul class="navbar-nav mr-auto">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Turtle" asp-action="Index">All Turtles</a>
                         </li>
+                    </ul>
+                    <ul class="navbar-nav mx-auto">
+                        <!--middle-->
+                    </ul>
+                    <ul class="nav navbar-nav flex-row justify-content-md-center justify-content-start flex-nowrap">
                         <form class="form-inline my-2 my-lg-0">
                             <div class="input-group mb-2 mr-sm-2">
                                 <input class="form-control mr-sm-2" type="search" placeholder="Search Turtle Name" aria-label="Search" name="SearchPhrase">
